--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-GROQ_API_KEY = "add your GQOQ_API_KEY"
+GROQ_API_KEY = "ADD YOUR GROQ API KEY " ## optional API key
+GOOGLE_API_KEY="ADD YOUR GOOGLE API KEY
+SERPER_API_KEY = "ADD YOUR SERPER API KEY"
